# llvm

buildbot/: configure.py
llvm/lib/SYCLLowerIR/: LowerESIMD.cpp
sycl/: CMakeLists.txt
sycl/include/CL/sycl/: accessor.hpp  backend_types.hpp  feature_test.hpp.in  handler.hpp
sycl/include/CL/sycl/INTEL/esimd/: esimd_memory.hpp
sycl/include/CL/sycl/INTEL/esimd/detail/: esimd_memory_intrin.hpp
sycl/include/CL/sycl/INTEL/esimd/detail/emu/: esimd_emu_functions_v0.h  esimd_emu_functions_v1.h  esimdcpu_device_interface.hpp
sycl/include/CL/sycl/detail/: cg_types.hpp  defines_elementary.hpp  pi.def  pi.h  pi.hpp
sycl/include/sycl/ext/intel/experimental/esimd/: memory.hpp
sycl/include/sycl/ext/intel/experimental/esimd/detail/: cmrt_if_defs.hpp  memory_intrin.hpp  simd_obj_impl.hpp
sycl/include/sycl/ext/intel/experimental/esimd/emu/detail/: esimd_emu_functions_v1.h
sycl/plugins/: CMakeLists.txt
sycl/plugins/esimd_cpu/: CMakeLists.txt  pi_esimd_cpu.cpp  pi_esimd_cpu.hpp
sycl/plugins/esimd_emulator/: CMakeLists.txt  pi_esimd_emulator.cpp
sycl/plugins/level_zero/: CMakeLists.txt  pi_level_zero.cpp
sycl/source/: backend.cpp
sycl/source/backend/: level_zero.cpp  opencl.cpp
sycl/source/detail/: config.cpp  device_filter.cpp  device_info.hpp  event_impl.cpp  event_impl.hpp  event_info.hpp  global_handler.cpp  pi.cpp  platform_impl.hpp  platform_info.hpp  plugin.hpp  queue_impl.hpp  sycl_mem_obj_t.cpp
sycl/source/detail/error_handling/: enqueue_kernel.cpp
sycl/source/detail/scheduler/: commands.cpp
sycl/unittests/pi/: BackendString.hpp  EnqueueMemTest.cpp  PlatformTest.cpp  TestGetPlugin.hpp
sycl/unittests/pi/cuda/: test_base_objects.cpp  test_commands.cpp  test_device.cpp  test_kernels.cpp  test_mem_obj.cpp  test_queue.cpp  test_sampler_properties.cpp
